<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>jeorg-spring-flash</artifactId>
        <groupId>org.jesperancinha.std</groupId>
        <version>1.0.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>jeorg-spring-flash-set-3</artifactId>
    <modules>
        <module>jeorg-spring-flash-3-1</module>
        <module>jeorg-spring-flash-3-2</module>
        <module>jeorg-spring-flash-3-3</module>
        <module>jeorg-spring-flash-3-4</module>
        <module>jeorg-spring-flash-3-5</module>
        <module>jeorg-spring-flash-3-6</module>
        <module>jeorg-spring-flash-3-7</module>
        <module>jeorg-spring-flash-3-8</module>
        <module>jeorg-spring-flash-3-9</module>
        <module>jeorg-spring-flash-3-10</module>
        <module>jeorg-spring-flash-3-11</module>
        <module>jeorg-spring-flash-3-12</module>
        <module>jeorg-spring-flash-3-13</module>
        <module>jeorg-spring-flash-3-14</module>
        <module>jeorg-spring-flash-3-15</module>
        <module>jeorg-spring-flash-3-16</module>
        <module>jeorg-spring-flash-3-17</module>
        <module>jeorg-spring-flash-3-18</module>
        <module>jeorg-spring-flash-3-19</module>
        <module>jeorg-spring-flash-3-20</module>
    </modules>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>

    <packaging>pom</packaging>
</project>